--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
+person.id=1
+person.name=tom
+person.hobby=??,??,???
+person.family=father,mother
+person.map.k1=k1
+person.map.v1=v1
+person.pet.type=dog
+person.pet.name=??
+
+simplebean.id=222
+simplebean.name=???starter
